upgrade to v9 + sckeletom

--- a/www/index.html
+++ b/www/index.html
@@ -10,8 +10,7 @@
   </head>
   <body style="background-color: #526E9C;">
     <img src="static/img/logo.png"/>
-    <p id="spinner" style="color:#ffffff">Loading admin clip2mix...</p>
-    <div unresolved>
+    <div>
       <apps-main fancy>
         <h2>hello apps</h2>
       </apps-main>
