--- a/www/index.html
+++ b/www/index.html
@@ -3,55 +3,13 @@
   <head>
     <title>Admin clip2mix</title>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <link rel="stylesheet" href="static/css/style.css" type="text/css">
     <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
-    <link rel="import" href="elements/apps-main/apps-main.html">
+    <link rel="import" href="elements/c2m-admin-app/c2m-admin-app.html">
   </head>
-  <body style="background-color: #526E9C;">
-    <img src="static/img/logo.png"/>
-    <div>
-      <apps-main fancy>
-        <h2>hello apps</h2>
-      </apps-main>
-    </div>
-     <script>
-        document.querySelector('img').addEventListener('click', function() {
-          var apps = document.querySelector('apps-main');
-          alert(apps.sayHello('Hallo!'));
-          document.querySelector('#spinner').style.display = 'none';
-        });
-
-        var MyElement = Polymer.Class({
-
-          is: 'my-element',
-
-          // See below for lifecycle callbacks
-          created: function() {
-            this.innerHTML = 'My element!';
-          }
-
-        });
-        document.registerElement('my-element', MyElement);
-
-
-        MyInput = Polymer({
-          is: 'my-input',
-          extends: 'my-element',
-          created: function() {
-            this.innerHTML = 'My element!';
-          }
-
-          
-        });
-
-        var el1 = new MyInput();
-
-
-        var el1 = new MyElement();
-        console.log(el1 instanceof HTMLInputElement); // true
-        // Equivalent:
-        var el2 = document.createElement('my-element');
-      </script>
+  <body unresolved>
+    <c2m-admin-app></c2m-admin-app>
   </body>
 </html>
