--- a/www/index.html
+++ b/www/index.html
@@ -7,9 +7,13 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <link rel="stylesheet" href="static/css/style.css" type="text/css">
     <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
+
+    <link rel="import" href="bower_components/paper-styles/paper-styles.html">
+    <link rel="import" href="elements/c2m-admin-app-theme/c2m-admin-app-theme.html">
     <link rel="import" href="elements/c2m-admin-app/c2m-admin-app.html">
+
   </head>
-  <body unresolved>
+  <body>
     <c2m-admin-app></c2m-admin-app>
   </body>
 </html>
