--- a/www/elements/c2m-admin-app/c2m-admin-app.html
+++ b/www/elements/c2m-admin-app/c2m-admin-app.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../bower_components/iron-icons/av-icons.html">
 <link rel="import" href="../../bower_components/iron-icons/social-icons.html">
+<link rel="import" href="../../bower_components/iron-pages/iron-pages.html">
 
 <link rel="import" href="../../bower_components/paper-drawer-panel/paper-drawer-panel.html">
 <link rel="import" href="../../bower_components/paper-header-panel/paper-header-panel.html">
@@ -19,7 +20,7 @@ Left Nav + List + Detail
 
   <template>
     <paper-drawer-panel id="navDrawerPanel" responsive-width="1280px">
-      <paper-header-panel drawer mode="seam">
+      <paper-header-panel drawer mode="standard">
 
         <!-- Drawer Toolbar -->
         <paper-toolbar id="drawerToolbar">
@@ -27,7 +28,8 @@ Left Nav + List + Detail
         </paper-toolbar>
 
         <!-- Drawer Content -->
-        <paper-menu class="list" attr-for-selected="data-route" selected="{{route}}" on-iron-select="onMenuSelect">
+        <paper-menu class="list" attr-for-selected="data-route"
+            selected="{{route}}" on-iron-select="onMenuSelect">
           <a data-route="home" href="/">
             <iron-icon icon="home"></iron-icon>
             <span>Home</span>
@@ -61,15 +63,43 @@ Left Nav + List + Detail
           <paper-toolbar>
             <paper-icon-button icon="menu" paper-drawer-toggle>
             </paper-icon-button>
+            <span>{{route}}</span>
           </paper-toolbar>
 
           <!-- List -->
-          <paper-menu class="list" on-iron-activate="_listTap">
-            <paper-item>hop</paper-item>
-            <paper-item>tutu</paper-item>
-            <paper-item>plop</paper-item>
-            <paper-item>plouf</paper-item>
-          </paper-menu>
+          <iron-pages attr-for-selected="data-route" selected="{{route}}"
+              on-iron-activate="_listTap"
+              class="list">
+            <section data-route="home">
+              <p>here you are!<p>
+            </section>
+
+            <section data-route="clips">
+              <paper-menu>
+                <paper-item>clip 1</paper-item>
+                <paper-item>clip 2</paper-item>
+                <paper-item>clip 3</paper-item>
+                <paper-item>clip 4</paper-item>
+              </paper-menu>
+            </section>
+
+            <section data-route="bands">
+              <paper-menu>
+                <paper-item>Band 1</paper-item>
+                <paper-item>Band 2</paper-item>
+                <paper-item>Band 3</paper-item>
+                <paper-item>Band ...</paper-item>
+              </paper-menu>
+            </section>
+
+            <section data-route="tags">
+              <paper-menu>
+                <paper-item>Tag 1</paper-item>
+                <paper-item>Tag 2</paper-item>
+                <paper-item>Tag 3</paper-item>
+              </paper-menu>
+            </section>
+          </iron-pages>
         </paper-header-panel>
 
         <paper-header-panel class="content-panel" main>
@@ -79,7 +109,35 @@ Left Nav + List + Detail
             </paper-icon-button>
           </paper-toolbar>
           <!-- Main Content -->
-          <div class="content">bla bla bla</div>
+          <iron-pages attr-for-selected="data-route" selected="{{route}}">
+            <section data-route="home">
+              Home main screen
+            </section>
+
+            <section data-route="clips">
+              Choose or create a Clip
+            </section>
+
+            <section data-route="bands">
+              Choose or create a band
+            </section>
+
+            <section data-route="tags">
+              Choose or create a new tag
+            </section>
+
+            <section data-route="clip-info">
+              Clip info
+            </section>
+
+            <section data-route="band-info">
+              Band info
+            </section>
+
+            <section data-route="tag-info">
+              Tag info
+            </section>
+          </iron-pages>
         </paper-header-panel>
 
       </paper-drawer-panel>
@@ -135,7 +193,12 @@ Left Nav + List + Detail
         page({
           hashbang: true
         });
-      }
+      },
+
+      onMenuSelect: function() {
+        //menu selected
+      },
+
     });
   </script>
 
