fix tags config

--- a/www/elements/c2m-admin-app/c2m-admin-app.html
+++ b/www/elements/c2m-admin-app/c2m-admin-app.html
@@ -45,7 +45,7 @@ Left Nav + List + Detail
             <span>Bands</span>
           </a>
 
-          <a data-route="tags" href="/bands">
+          <a data-route="tags" href="/tags">
             <iron-icon icon="description"></iron-icon>
             <span>Tags</span>
           </a>
