--- a/www/elements/c2m-admin-app/c2m-admin-app.html
+++ b/www/elements/c2m-admin-app/c2m-admin-app.html
@@ -6,7 +6,6 @@
 <link rel="import" href="../../bower_components/paper-drawer-panel/paper-drawer-panel.html">
 <link rel="import" href="../../bower_components/paper-header-panel/paper-header-panel.html">
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="../../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../../bower_components/paper-menu/paper-menu.html">
 <link rel="import" href="../../bower_components/paper-toolbar/paper-toolbar.html">
 
@@ -29,7 +28,7 @@ Left Nav + List + Detail
 
         <!-- Drawer Content -->
         <paper-menu class="list" attr-for-selected="data-route"
-            selected="{{route}}" on-iron-select="onMenuSelect">
+            selected="{{mainRoute}}" on-iron-select="onMenuSelect">
           <a data-route="home" href="/">
             <iron-icon icon="home"></iron-icon>
             <span>Home</span>
@@ -63,11 +62,11 @@ Left Nav + List + Detail
           <paper-toolbar>
             <paper-icon-button icon="menu" paper-drawer-toggle>
             </paper-icon-button>
-            <span>{{route}}</span>
+            <span>{{mainRoute}}</span>
           </paper-toolbar>
 
           <!-- List -->
-          <iron-pages attr-for-selected="data-route" selected="{{route}}"
+          <iron-pages attr-for-selected="data-route" selected="{{mainRoute}}"
               on-iron-activate="_listTap"
               class="list">
             <section data-route="home">
@@ -75,28 +74,31 @@ Left Nav + List + Detail
             </section>
 
             <section data-route="clips">
-              <paper-menu>
-                <a href="/clips/clip1"><paper-item>clip 1</paper-item></a>
-                <a href="/clips/clip2"><paper-item>clip 2</paper-item></a>
-                <a href="/clips/clip3"><paper-item>clip 3</paper-item></a>
-                <a href="/clips/clip4"><paper-item>clip 4</paper-item></a>
+              <paper-menu attr-for-selected="data-routeid" selected="{{routeId}}"
+                          class="list">
+                <a data-routeid="clip1" href="/clips/clip1"><span>clip 1</span></a>
+                <a data-routeid="clip2" href="/clips/clip2"><span>clip 2</span></a>
+                <a data-routeid="clip3" href="/clips/clip3"><span>clip 3</span></a>
+                <a data-routeid="clip4" href="/clips/clip4"><span>clip 4</span></a>
               </paper-menu>
             </section>
 
             <section data-route="bands">
-              <paper-menu>
-                <paper-item>Band 1</paper-item>
-                <paper-item>Band 2</paper-item>
-                <paper-item>Band 3</paper-item>
-                <paper-item>Band ...</paper-item>
+              <paper-menu attr-for-selected="data-routeid" selected="{{routeId}}"
+                          class="list">
+                <a data-routeid="band1" href="/bands/band1"><span>band 1</span></a>
+                <a data-routeid="band2" href="/bands/band2"><span>band 2</span></a>
+                <a data-routeid="band3" href="/bands/band3"><span>band 3</span></a>
+                <a data-routeid="band4" href="/bands/band4"><span>band 4</span></a>
               </paper-menu>
             </section>
 
             <section data-route="tags">
-              <paper-menu>
-                <paper-item>Tag 1</paper-item>
-                <paper-item>Tag 2</paper-item>
-                <paper-item>Tag 3</paper-item>
+              <paper-menu attr-for-selected="data-routeid" selected="{{routeId}}"
+                          class="list">
+                <a data-routeid="tag1" href="/tags/tag1"><span>tag 1</span></a>
+                <a data-routeid="tag2" href="/tags/tag2"><span>tag 2</span></a>
+                <a data-routeid="tag3" href="/tags/tag3"><span>tag 3</span></a>
               </paper-menu>
             </section>
           </iron-pages>
@@ -109,21 +111,24 @@ Left Nav + List + Detail
             </paper-icon-button>
           </paper-toolbar>
           <!-- Main Content -->
-          <iron-pages attr-for-selected="data-route" selected="{{route}}">
+          <iron-pages attr-for-selected="data-route" selected="{{mainRoute}}">
             <section data-route="home">
               Home main screen
             </section>
 
             <section data-route="clips">
-              Choose or create a Clip <span>{{params.name}}</span>
+              Choose or create a Clip<br/>
+              <span>{{routeId}}</span>
             </section>
 
             <section data-route="bands">
-              Choose or create a band
+              Choose or create a band<br/>
+              <span>{{routeId}}</span>
             </section>
 
             <section data-route="tags">
-              Choose or create a new tag
+              Choose or create a new tag<br/>
+              <span>{{routeId}}</span>
             </section>
           </iron-pages>
         </paper-header-panel>
@@ -137,25 +142,21 @@ Left Nav + List + Detail
       is: 'c2m-admin-app',
 
       properties: {
-        route: {
+        mainRoute: {
           type: String,
           notify: true,
-          value: "home"
+          value: function (){
+            return 'home';
+          }
         },
-
-        params: {
-          type: Object,
-          notify: true
+        routeId: {
+          type: String,
+          notify: true,
+          value: function (){
+            return '';
+          }
         }
       },
-
-      observers: [
-         'paramsNameChanged(params.name)'
-       ],
-
-       paramsNameChanged: function(params) {
-         console.log('new name is ' + name);
-       },
 
       _computeListWidth: function(isMobile) {
         // when in mobile screen size, make the list be 100% width to cover
@@ -169,34 +170,44 @@ Left Nav + List + Detail
         // We use Page.js for routing. This is a Micro
         // client-side router inspired by the Express router
         // More info: https://visionmedia.github.io/page.js/
-        page('/', function () {
-          this.route = 'home';
+        var self = this;
+        page('/', function (data) {
+          self.setRoute('home', data);
         });
-        page('/clips', function () {
-          this.route = 'clips';
+
+        page('/clips', function (data) {
+          self.setRoute('clips', data);
         });
         page('/clips/:name', function (data) {
-          this.route = 'clips';
-          this.params = data.params;
+          self.setRoute('clips', data);
         });
-        page('/bands', function () {
-          this.route = 'bands';
+
+        page('/bands', function (data) {
+          self.setRoute('bands', data);
         });
         page('/bands/:name', function (data) {
-          this.route = 'band-info';
-          this.params = data.params;
+          self.setRoute('bands', data);
         });
-        page('/tags', function () {
-          this.route = 'bands';
+
+        page('/tags', function (data) {
+          self.setRoute('tags', data);
         });
         page('/tags/:name', function (data) {
-          this.route = 'tag-info';
-          this.params = data.params;
+          self.setRoute('tags', data);
         });
         // add #! before urls
         page({
           hashbang: true
         });
+      },
+
+      setRoute: function(route, data){
+        this.mainRoute = route;
+        if(data && data.params && data.params.name){
+          this.routeId = data.params.name;
+        } else {
+          this.routeId = '';
+        }
       },
 
       onMenuSelect: function() {
