--- a/www/elements/c2m-admin-app/c2m-admin-app.html
+++ b/www/elements/c2m-admin-app/c2m-admin-app.html
@@ -9,6 +9,8 @@
 <link rel="import" href="../../bower_components/paper-menu/paper-menu.html">
 <link rel="import" href="../../bower_components/paper-toolbar/paper-toolbar.html">
 
+<link rel="import" href="../c2m-menu-item/c2m-menu-item.html">
+
 <script src="../../bower_components/page/page.js"></script>
 <!--
 Left Nav + List + Detail
@@ -33,17 +35,14 @@ Left Nav + List + Detail
             <iron-icon icon="home"></iron-icon>
             <span>Home</span>
           </a>
-
           <a data-route="clips" href="/clips">
             <iron-icon icon="av:video-library"></iron-icon>
             <span>Clips</span>
           </a>
-
           <a data-route="bands" href="/bands">
             <iron-icon icon="social:people"></iron-icon>
             <span>Bands</span>
           </a>
-
           <a data-route="tags" href="/tags">
             <iron-icon icon="description"></iron-icon>
             <span>Tags</span>
@@ -82,6 +81,12 @@ Left Nav + List + Detail
             <section data-route="clips">
               <paper-menu attr-for-selected="data-routeid" selected="{{routeId}}"
                           class="list">
+                <template is="dom-repeat" items="{{clips}}">
+                  <c2m-menu-item data-routeid="{{item.id}}"
+                                 id="{{item.id}}" name="{{item.name}}">
+                  </c2m-menu-item>
+                </template>
+
                 <a data-routeid="clip1" href="/clips/clip1"><span>clip 1</span></a>
                 <a data-routeid="clip2" href="/clips/clip2"><span>clip 2</span></a>
                 <a data-routeid="clip3" href="/clips/clip3"><span>clip 3</span></a>
@@ -162,6 +167,14 @@ Left Nav + List + Detail
           value: function (){
             return '';
           }
+        },
+        clips: {
+          type: Array,
+          value: function(){
+            return [{id: 'wind', name: "Wind"},
+                    {id: 'soon-we-ll-be-found', name: "Soon We'll Be Found"},
+                    {id: 'kick-in-the-bucket', name: "Kick in the bucket"},]
+          }
         }
       },
 
@@ -212,7 +225,7 @@ Left Nav + List + Detail
         });
         // add #! before urls
         page({
-          hashbang: true
+          hashbang: true,
         });
       },
 
