--- a/www/elements/c2m-menu-item/c2m-menu-item.html
+++ b/www/elements/c2m-menu-item/c2m-menu-item.html
@@ -30,7 +30,7 @@
   </style>
 
   <template>
-    <a data-routeid="{{id}}" href="{{path}}"><span>{{name}}</span></a>
+    <div data-routeid="{{id}}" href="{{path}}"><span>{{name}}</span></div>
   </template>
 </dom-module>
 
