--- a/www/elements/c2m-admin-app/test/basic-test.html
+++ b/www/elements/c2m-admin-app/test/basic-test.html
@@ -11,30 +11,21 @@
     <body>
         <!-- You can use the document as a place to set up your fixtures. -->
         <c2m-admin-app id="app1"></c2m-admin-app>
+        <c2m-admin-app id="app2"></c2m-admin-app>
         <script>
-            var app1 = document.querySelector('c2m-admin-app');
+            var app1 = document.querySelector('#app1');
+            var app2 = document.querySelector('#app2');
 
             suite('<c2m-admin-app>', function() {
               test('defaults properties', function() {
                 assert.equal(app1.mainRoute, 'home');
                 assert.equal(app1.routeId, '');
+                assert.equal(app2.mainRoute, 'home');
+                assert.equal(app2.routeId, '');
               });
-              test('setRoute', function(){
-                app1.setRoute('clips', null);
-                assert.equal(app1.mainRoute, 'clips');
-                assert.equal(app1.routeId, '');
-                app1.setRoute('clips');
-                assert.equal(app1.mainRoute, 'clips');
-                assert.equal(app1.routeId, '');
-                app1.setRoute('clips', {params: null});
-                assert.equal(app1.mainRoute, 'clips');
-                assert.equal(app1.routeId, '');
-                app1.setRoute('clips', {params: {}});
-                assert.equal(app1.mainRoute, 'clips');
-                assert.equal(app1.routeId, '');
-                app1.setRoute('clips', {params: {name: 'clip1'}});
-                assert.equal(app1.mainRoute, 'clips');
-                assert.equal(app1.routeId, 'clip1');
+              test('defaults properties closure', function(){
+                app1.mainRoute = 'clips';
+                assert.equal(app2.mainRoute, 'home');
               });
             });
         </script>
