--- a/www/index.html
+++ b/www/index.html
@@ -6,12 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <link rel="stylesheet" href="static/css/style.css" type="text/css">
-    <script src="components/webcomponentsjs/webcomponents.js"></script>
     <script>
       window.Polymer = window.Polymer || {};
-      window.Polymer.dom = 'shady';
+      window.Polymer.dom = 'shadow';
     </script>
-    <!--<script src="bower_components/webcomponentsjs/webcomponents.js"></script>-->
+    <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 
     <link rel="import" href="bower_components/paper-styles/paper-styles.html">
     <link rel="import" href="elements/c2m-admin-app-theme/c2m-admin-app-theme.html">
